# hideit

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_exe.yaml  ci.yaml
hideit/: __main__.py  arg_validators.py  cli.py  crypt.py
